# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
page_analyzer/: __init__.py  app.py  database.sql
page_analyzer/static/: styles.css
page_analyzer/templates/: index.html  url_checks.html  url_detail.html  urls.html
